--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "ng",
     "ngx"
   ],
-  "author": "Piotr Dziwinski",
+  "author": "Emmanuel Hinneh",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/angular-slider/ngx-slider.git"
+    "url": "https://github.com/theHinneh/ngx-slider.git"
   },
   "bugs": {
-    "url": "https://github.com/angular-slider/ngx-slider/issues"
+    "url": "https://github.com/theHinneh/ngx-slider/issues"
   },
   "homepage": "https://github.com/angular-slider/ngx-slider#readme",
   "scripts": {
@@ -55,7 +55,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.9",
+    "@angular/cli": "~7.3.10",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.8",
